--- a/OutworldzFiles/Mysql/my.ini
+++ b/OutworldzFiles/Mysql/my.ini
@@ -64,6 +64,9 @@ character-set-server=utf8
 character-set-client-handshake=FALSE
 lower_case_table_names=1
 
+# for crash recovery only. See https://dev.mysql.com/doc/refman/8.0/en/innodb-parameters.html#sysvar_innodb_force_recovery
+#innodb_flush_method =2
+
 # auto-edited by Dreamworld
 # The TCP/IP Port the MySQL Server will listen on
 port=3306
@@ -73,11 +76,11 @@ max_allowed_packet=128M
 
 #Path to installation directory. All paths are usually resolved relative to this.
 # auto-edited by Dreamworld
-basedir="C:/Almost Heaven/OutworldzFiles/Mysql"
+basedir="C:/XXX/OutworldzFiles/Mysql"
 
 #Path to the database root
 # auto-edited by Dreamworld
-datadir="C:/Almost Heaven/OutworldzFiles/Mysql/Data"
+datadir="C:/XXX/OutworldzFiles/Mysql/Data"
 
 # The default character set that will be used when a new schema or table is
 # created and no character set is defined
@@ -188,7 +191,7 @@ innodb_buffer_pool_size=100M
 # unneeded buffer pool flush activity on log file overwrite. However,
 # note that a larger logfile size will increase the time needed for the
 # recovery process.
-innodb_log_file_size=50M
+innodb_log_file_size=100M
 
 # Number of threads allowed inside the InnoDB kernel. The optimal value
 # depends highly on the application, hardware as well as the OS
