--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -798,6 +798,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="cubes.ico" />
+    <None Include="Resources\selection.png" />
+    <None Include="Resources\replace2.png" />
+    <None Include="Resources\navigate_up2.png" />
     <None Include="Outworldz.pfx" />
     <None Include="Resources\scroll.png" />
     <None Include="Resources\document_text.png" />
@@ -812,7 +815,6 @@
     <None Include="Resources\flag_brazil.png" />
     <None Include="Resources\flag_saudi_arabia.png" />
     <None Include="Resources\basque.png" />
-    <None Include="Resources\view1.png" />
     <None Include="Resources\view.png" />
     <None Include="Resources\selection_view.png" />
     <None Include="Resources\Blank256.jpg" />
@@ -859,7 +861,6 @@
     <None Include="Resources\navigate_down2.png" />
     <None Include="Resources\navigate_minus.png" />
     <None Include="Resources\navigate_plus.png" />
-    <None Include="Resources\navigate_up2.png" />
     <None Include="Resources\check2.png" />
     <None Include="Resources\media_stop.png" />
     <None Include="Resources\media_stop_red.png" />
@@ -877,10 +878,7 @@
     <None Include="Resources\disks.png" />
     <None Include="Resources\text_marked.png" />
     <None Include="Resources\media_play.png" />
-    <None Include="Resources\media_stop_red1.png" />
-    <None Include="Resources\recycle1.png" />
     <None Include="Resources\text_align_justified.png" />
-    <None Include="Resources\document_view1.png" />
     <None Include="Resources\redo.png" />
     <None Include="Resources\navigate_up.png" />
     <None Include="Resources\navigate_down.png" />
@@ -893,14 +891,11 @@
     <None Include="Resources\nav_plain_blue.png" />
     <None Include="Resources\media_fast_forward.png" />
     <None Include="Resources\media_rewind.png" />
-    <None Include="Resources\Arrow2Right.png" />
-    <None Include="Resources\Arrow2Left.png" />
     <None Include="Resources\home.png" />
     <None Include="Resources\home_02.png" />
     <None Include="Resources\user1_into.png" />
     <None Include="Resources\flash.png" />
     <None Include="Resources\refresh.png" />
-    <None Include="Resources\replace2.png" />
     <None Include="Resources\recycle.png" />
     <None Include="Resources\earth_network.png" />
     <None Include="Resources\download.png" />
