--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -471,6 +471,7 @@
     <Compile Include="Help.vb" />
     <Compile Include="IP.vb" />
     <Compile Include="jOpensim.vb" />
+    <Compile Include="Monit.vb" />
     <Compile Include="My Project\Resources.cz.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
