--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
@@ -49,7 +49,7 @@ http_listener_port=8004
 ;
 ; Automatically changed by Dreamworld - do not change this
 ;# used by the one-exe-per-instance logic. This becomes the folder for the regions file.
-RegionFolderName=
+RegionFolderName=!Seconds-Crew
 ;
 ;# {BaseHostname} {} {BaseHostname} {"example.com" "127.0.0.1"} "127.0.0.1"
 BaseHostname=192.168.2.139
@@ -322,7 +322,7 @@ emailmodule=DefaultEmailModule
 ;; TelehubAllowLandmark allows users with landmarks to override telehub
 ;; routing and land at the landmark coordinates when set to true
 ;; default is false
-; TelehubAllowLandmark = false
+TelehubAllowLandmark = true
 ;
 ; #
 ; # statistics
@@ -370,6 +370,7 @@ channel_notify=-800
 ;
 ; - disallow logins while scripts are loading
 ; Instability can occur on regions with 100+ scripts if users enter before they have finished loading
+;; MUST BE FALSE FOr SMART START
 login_disable=true
 ;
 ; - send an alert as json to a service
@@ -797,7 +798,7 @@ MuteListModule=MuteListModule
 ;# {MuteListURL} {OfflineMessageModule:OfflineMessageModule} {} {} http://yourserver/Mute.php
 ;; URL of the web service that serves mute lists. Not currently used, but
 ;; must be set to allow offline messaging to work.
-MuteListURL=${Const|BaseURL}:${Const|ApachePort}/MuteList/
+MuteListURL=${Const|BaseURL}:${Const|ApachePort}/MuteList/Mutelist.php
 ;
 ;
 ;; Control whether group invites and notices are stored for offline users.
@@ -875,7 +876,6 @@ access_ip_addresses="127.0.0.1"
 ;; will be available
 enabled_methods=admin_console_command|admin_shutdown|admin_teleport_agent|admin_broadcast
 ;
-;
 ;; specify the default appearance for an avatar created through the remote
 ;; admin interface
 ;; This will only take effect is the file specified by the
@@ -883,20 +883,18 @@ enabled_methods=admin_console_command|admin_shutdown|admin_teleport_agent|admin_
 default_male=Default Male
 default_female=Default Female
 ;
-;
 ;; Update appearance copies inventory items and wearables of default
 ;; avatars. if this value is false, just worn assets are copied to the
 ;; Clothes folder; if true, all Clothes and Bodyparts subfolders are copied.
 ;; The receiver will wear the same items the default avatar did wear.
 copy_folders=true
 ;
-;
 ;; Path to default appearance XML file that specifies the look of the
 ;; default avatars
 default_appearance=default_appearance.xml
 ;
-[Wind]
 ;
+[Wind]
 ;
 ;# {enabled} {} {Enable wind module?} {true false} true
 ;; Enables the wind module.
@@ -921,7 +919,8 @@ wind_plugin = SimpleRandomWind
 ;# {strength} {enabled:true wind_plugin:SimpleRandomWind} {Wind strength?} {} 1.0
 ;; This setting is specific to the SimpleRandomWind plugin
 ;; Adjusts wind strength. 0.0 = no wind, 1.0 = normal wind.
- strength = 1.0
+strength = 1.0
+;
 ;
 [LightShare]
 ;
@@ -935,12 +934,12 @@ enable_windlight=true
 ;
 [Materials]
 ;
-;
 ;# {enable_materials} {} {Enable Materials support?} {true false} true
 ;; This enables the use of Materials.
 enable_materials = true
 ;
-; MaxMaterialsPerTransaction = 50
+MaxMaterialsPerTransaction = 50
+;
 ;
 [DataSnapshot]
 ;
@@ -955,13 +954,13 @@ index_sims=True
 ;
 ;; how many items have to be stale before an update is run
 ;;Waits default_snapshot_period seconds normally. But if there are max_changes_before_update stale prims, then its run right
-;max_changes_before_update=1
+;max_changes_before_update=
 ;
 ;# {data_exposure} {index_sims:true} {How much data should be exposed?} {minimum all} minimum
 ;; The variable data_exposure controls what the regions expose:
 ;;    minimum: exposes only things explicitly marked for search
 ;;    all: exposes everything
-data_exposure=all
+data_exposure=minimum
 ;
 ;
 ;# {gridname} {index_sims:true} {Enter the name fo your grid} {} OSGrid
@@ -975,7 +974,7 @@ gridname=${Const|GridName}
 ;; Period between data snapshots, in seconds. 20 minutes, for starters,
 ;; so that you see the initial changes fast.
 ;; Later, you may want to increase this to 3600 (1 hour) or more
-default_snapshot_period=300
+default_snapshot_period=3600
 ;
 ;
 ;; This will be created in bin, if it doesn't exist already. It will hold
@@ -1006,6 +1005,7 @@ SearchURL=
 ; searchPeople = false
 ; also optional
 ; DebugMode = false
+;
 ;
 [Economy]
 ;
@@ -1039,8 +1039,8 @@ SellEnabled=true
 ; default is false, ie, do not create
 MeshModelAllowTextureToInventory=true
 ;
-[YEngine]
 ;
+[YEngine]
 ;
 ;# {Enabled} {} {Enable the XEngine scripting engine?} {true false} true
 ;; Enable this engine in this OpenSim instance
@@ -1050,8 +1050,8 @@ Enabled=True
 ;; llSetTimerEvent minimum value. Default 0.5s, 0.05s whould be more reasonable
 MinTimerInterval=0.2
 ;
-[XEngine]
 ;
+[XEngine]
 ;
 ;# {Enabled} {} {Enable the XEngine scripting engine?} {true false} true
 ;; Enable this engine in this OpenSim instance
@@ -1059,13 +1059,10 @@ Enabled=False
 ;
 ;; How many threads to keep alive even if nothing is happening
 ; MinThreads = 2
-;
 ;; How many threads to start at maximum load
 ; MaxThreads = 100
-;
 ;; Time a thread must be idle (in seconds) before it dies
 ; IdleTimeout = 60
-;
 ; Set by Dreamgrid to 1/11th of a second. Can be overwritten per region
 ;; llSetTimerEvent minimum value. Default 0.5s, 0.05s whould be more reasonable
 MinTimerInterval=0.2
@@ -1074,16 +1071,13 @@ MinTimerInterval=0.2
 ;; Thread priority ("Lowest", "BelowNormal", "Normal", "AboveNormal",
 ;; "Highest")
 ; Priority = "BelowNormal"
-;
 ;; Maximum number of events to queue for a script (excluding timers)
 ; MaxScriptEventQueue = 300
-;
 ;; Stack size per script engine thread in bytes.
 ;; If you are experiencing StackOverflowExceptions you may want to increase this (e.g. double it).
 ;; The trade-off may be increased memory usage by the script engine.
 ; ThreadStackSize = 262144
 ;; Set this to true (the default) to load each script into a separate
-;
 ;; AppDomain.
 ;;
 ;; Setting this to false will load all script assemblies into the
@@ -1101,8 +1095,8 @@ MinTimerInterval=0.2
 ;; or by deleting the script DLL* files in bin/ScriptEngines/<region-id>/
 ;; One can move from co-op back to abort without recompilation, but reverting back to co-op again will need script recompile
 ;; Current valid values are "abort" and "co-op"
-ScriptStopStrategy = "co-op"
-;
+ScriptStopStrategy = co-op
+
 ;# {DeleteScriptsOnStartup} {} {Delete previously compiled script DLLs on startup?} {true false} true
 ;; Controls whether previously compiled scripts DLLs are deleted on sim restart. If you set this to false
 ;; then startup will be considerably faster since scripts won't need to be recompiled. However, then it becomes your responsibility to delete the
@@ -1116,19 +1110,15 @@ DeleteScriptsOnStartup=False
 ;# {AllowedCompilers} {Enabled:true} {Languages to allow (comma separated)?} {} lsl
 ;; List of allowed languages (lsl,vb,cs)
 ;; AllowedCompilers=lsl,cs,vb
-;
 ;; *warning*, non lsl languages have access to static methods such as
 ;; System.IO.File.  Enable at your own risk.
 ; AllowedCompilers = "lsl"
-;
 ;; Compile debug info (line numbers) into the script assemblies
 ; CompileWithDebugInformation = true
-;
 ; ==== Settings for MOD and OSSL functions have been moved to the [OSSL] section
 ;# {EventLimit} {} {Amount of time a script can spend in an event handler} {} 30
 ;; Time a script can spend in an event handler before it is interrupted
 ; EventLimit = 30
-;
 ;# {KillTimedOutScripts} {} {Kill script in case of event time overruns?} {true false} false
 ;; If a script overruns it's event limit, kill the script?
 KillTimedOutScripts=true
@@ -1136,35 +1126,28 @@ KillTimedOutScripts=true
 ;# {ScriptDelayFactor} {} {Multiplier for scripting delays} {} 1.0
 ;; Sets the multiplier for the scripting delays
 ; ScriptDelayFactor = 1.0
-;
 ;# {ScriptDistanceLimitFactor} {} {Multiplier for 10.0m distance limits?} {}
 ;; The factor the 10 m distances limits are multiplied by
 ; ScriptDistanceLimitFactor = 1.0
-;
 ;# {NotecardLineReadCharsMax} {} {Maximum length of notecard line?} {} 255
 ;; Maximum length of notecard line read
 ;; Increasing this to large values potentially opens
 ;; up the system to malicious scripters
 ; NotecardLineReadCharsMax = 255
-;
 ;# {SensorMaxRange} {} {Sensor range} {} 96.0
 ;; Sensor settings
 ; SensorMaxRange = 96.0
-;
 ;# {SensorMaxResults} {} {Max sensor results returned?} {}
 ; SensorMaxResults = 16
-;
 ;# {DisableUndergroundMovement} {} {Disable underground movement of prims} {true false} true
 ;; Disable underground movement of prims (default true); set to
 ;; false to allow script controlled underground positioning of
 ;; prims
 ; DisableUndergroundMovement = true
-;
 ;# {ScriptEnginesPath} {} {Path to script assemblies} {} ScriptEngines
 ;; Path to script engine assemblies
 ;; Default is ./bin/ScriptEngines
 ; ScriptEnginesPath = "ScriptEngines"
-;
 [OSSL]
 ;
 ;# {Include-osslEnable} {} {Include file for enabling and permissions for OSSL functions} {}
@@ -1180,14 +1163,10 @@ Include-osslDefaultEnable="config-include/osslEnable.ini"
 ;; You need to load a local service for a standalone, and a remote service
 ;; for a grid region. Use one of the lines below, as appropriate
 ;; If you're using Freeswitch on a standalone then you will also need to configure the [FreeswitchService] section in config-include/StandaloneCommon.ini
-;
 ; LocalServiceModule = OpenSim.Services.FreeswitchService.dll:FreeswitchService
-LocalServiceModule = OpenSim.Services.Connectors.dll:RemoteFreeswitchConnector
+; LocalServiceModule = OpenSim.Services.Connectors.dll:RemoteFreeswitchConnector
 ;; If using a remote connector, specify the server URL
-;
-;FreeswitchServiceURL = http://my.grid.server:8004/fsapi
-FreeswitchServiceURL = 
-;
+; FreeswitchServiceURL = http://my.grid.server:8004/fsapi
 [VivoxVoice]
 ;
 ; The VivoxVoice module will allow you to provide voice on your
@@ -1244,6 +1223,8 @@ vivox_channel_max_range=80
 ; channel clamping distance: distance before attenuation applies
 ; - a value between 0 and 160, default is 10
 vivox_channel_clamping_distance=10
+;
+;
 [Groups]
 ;
 ;# {Enabled} {} {Enable groups?} {true false} false
@@ -1287,7 +1268,7 @@ LocalService=remote
 ;; or http://mygridserver.com:82/Grid/ for SimianGrid
 ;; or ${Const|BaseURL}:${Const|PrivatePort} for robust, V2
 ;; Leave it commented for standalones, V2
-GroupsServerURI=${Const|PrivURL}:${Const|PrivatePort}
+GroupsServerURI=${Const|BaseURL}:${Const|PrivatePort}
 ;
 ; Used by JOpensim, from Groups
 XmlRpcServiceReadKey=1234
@@ -1395,7 +1376,6 @@ ProfileServiceURL=${Const|BaseURL}:${Const|PublicPort}
 ;
 [XBakes]
 ;
-;
 ;# {URL} {} {Set URL for Baked texture service} {}
 ;; Sets the URL for the baked texture ROBUST service.
 ;; Disabled when unset.
@@ -1405,8 +1385,8 @@ URL=${Const|PrivURL}:${Const|PrivatePort}
 ;; Optional module to highlight God names in the viewer.
 ;; Uncomment and customize appropriately if you want this behavior.
 ;;
-;[GodNames]
-;	Enabled = false
+[GodNames]
+	Enabled = true
 ;	FullNames = "Test User, Foo Bar"
 ;	Surnames = "Kryztlsk"
 ;
@@ -1434,6 +1414,7 @@ Include-Architecture="config-include/GridHypergrid.ini"
 ; Include-Architecture = "config-include/HyperSimianGrid.ini"
 ;
 [AutoBackupModule]
+;
 ;
 ; Configuration Settings
 ; Global (in OpenSim.ini under [AutoBackupModule] section)
@@ -1522,7 +1503,8 @@ AutoBackupDir=O:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/AutoBackup/
 ;
 ; Automatically changed by Dreamworld - do not change this - Should be True ( case snsitive)
 [WebStats]
-enabled=False
+enabled=True
+;
 ;
 ;; Thankxx to a tip from Jeremy Westfall!
 [Cloud]
@@ -1538,10 +1520,7 @@ density=0.3
 ; default is 1000
 cloud_update_rate=1000
 ;
-;
 [Modules]
-;
-;
 ;;LandServices module is required for ossearch to function properly in grid mode.
 LandServices="RemoteLandServicesConnector"
 LandServiceConnector="True"
@@ -1554,7 +1533,7 @@ GLBKey=OAuth Sandbox key
 GLBSecret=OAuth sandbox secret
 GLBOwnerName=Your Avatar Name
 GLBOwnerEmail=Your Email
-GLBSpecificConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;"
+GLBSpecificConnectionString="Data Source=localhost;Database=robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;"
 ;
 ;
 [LoginService]
@@ -1578,10 +1557,10 @@ announce_entering = "{0} enters {1} (now {2} visitors in this region)"
 announce_leaving = "{0} leaves {1} (back to {2} visitors in this region)"	
 ;
 ; The URL where avatar counts and lists will be sent.
-; broker=http://localhost:${Const|DiagnosticsPort}
+broker="http://localhost:${Const|DiagnosticsPort}/broker?{0}/{1}/{2}"
 ;
 ; Number of seconds to timeout a broker post request
-broker_timeout=1
+broker_timeout=5
 ;
 ; password for updating the welcome message templates via XmlRpc
 ;password = SECRET
@@ -1603,7 +1582,7 @@ regions = ""
 ; to format substitution:
 ; {0} is replaced with the region's name
 ; {1} is replaced with the region's UUID
-broker = "http://127.0.0.1:${Const|DiagnosticsPort}/Broker?Name={0}&Region={1}"
+;broker = "http://broker.place.com/{1}"
 ;
 ;
 [ClientStack.LindenUDP]
